update percentage in education section and add project view link in projects.json

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -47,8 +47,8 @@
     "image": "port",
     "category": "basicweb",
     "links": {
-      "view": "",
-      "code": ""
+      "view": "https://portfolio-sahityasingh.netlify.app/",
+      "code": "https://github.com/git-Sahitya/myPortfolio"
     }
   } 
 
